kubernetes/product-service/blue-green/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-$TARGET_ROLE
  labels:
    app: product-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      annotations:
      labels:
        app: product-service
        role: $TARGET_ROLE
    spec:
      containers:
        - name:  product-service
          image: teruyi/product-service:$VERSION
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
               cpu: 500m
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: liveness-port
            failureThreshold: 1
            periodSeconds: 10
