kubernetes/product-service/blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: product.service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-service-production
                port:
                  number: 8080
